--- a/YunSkkjKits/Podfile
+++ b/YunSkkjKits/Podfile
@@ -2,6 +2,7 @@ project 'YunSkkjKits.xcodeproj'
 
 # Uncomment the next line to define a global platform for your project
 platform :ios, '9.0'
+inhibit_all_warnings!
 
 target 'YunSkkjKits' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
